--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="passwordHint">Password</string>
     <string name="SignIn">Sign In</string>
     <string name="GuestContinue">Continue as guest</string>
+
+
+    <string-array name="drawer_titles">
+        <item>Timeline</item>
+        <item>My Team</item>
+        <item>Slot</item>
+        <item>FAQs</item>
+        <item>About</item>
+        <item>Logout</item>
+    </string-array>
 </resources>
