Made hell lot of changes and improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
         <item>Timeline</item>
         <item>My Team</item>
         <item>Slot</item>
+        <item>Coupons</item>
         <item>FAQs</item>
         <item>About</item>
         <item>Logout</item>
