setup audio perms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="team_members">Team members</string>
     <string name="hackathon_phase_1">Hackathon Phase 1</string>
     <string name="time">23:54:21</string>
+    <string name="permission_request">You need audio permissions to ask questions from Mr Mojo</string>
 
 
     <string-array name="drawer_titles">
