--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,13 @@
         <item>About</item>
         <item>Logout</item>
     </string-array>
+    <string-array name="drawer_titles_guest">
+        <item>Timeline</item>
+        <item>My Team</item>
+        <item>Slot</item>
+        <item>Coupons</item>
+        <item>FAQs</item>
+        <item>About</item>
+        <item>LogIn</item>
+    </string-array>
 </resources>
