timeline and other changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GDGDevfest</string>
+    <string name="app_name">Devfest \'16</string>
     <string name="VitText">VIT Vellore</string>
     <string name="devfest_16">DevFest\'16</string>
     <string name="gdg_vellore">Google Developers Group VIT Vellore</string>
